[package]
name = "ethrex-blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp.workspace = true
ethrex-common.workspace = true
ethrex-storage.workspace = true
ethrex-trie.workspace = true
ethrex-vm.workspace = true

thiserror.workspace = true
sha3.workspace = true
tracing.workspace = true
bytes.workspace = true
hex.workspace = true
rustc-hash.workspace = true
tokio = { workspace = true, features = ["time", "rt"] }
tokio-util.workspace = true

ethrex-metrics = { path = "./metrics", default-features = false }

[dev-dependencies]
serde_json.workspace = true
hex = "0.4.3"
tokio = { workspace = true, features = ["full"] }

[lib]
path = "./blockchain.rs"

[features]
default = []
c-kzg = ["ethrex-common/c-kzg", "ethrex-vm/c-kzg"]
metrics = ["ethrex-metrics/transactions"]
sp1 = ["ethrex-common/sp1", "ethrex-vm/sp1"]
risc0 = ["ethrex-common/risc0", "ethrex-vm/risc0"]

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"
