[package]
name = "ethrex-blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp.workspace = true
ethrex-common = { workspace = true, default-features = false }
ethrex-crypto.workspace = true
ethrex-storage.workspace = true
ethrex-trie.workspace = true
ethrex-vm.workspace = true
ethrex-metrics = { path = "./metrics", default-features = false }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
url = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
spawned-concurrency = { workspace = true, optional = true }
ethrex-guest-program = { workspace = true, optional = true, default-features = false }
ssz = { git = "ssh://git@github.com/lambdaclass/libssz", optional = true }
ssz-merkle = { git = "ssh://git@github.com/lambdaclass/libssz", optional = true }
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
hex.workspace = true
rustc-hash.workspace = true
crossbeam.workspace = true
tokio = { workspace = true, features = ["time", "rt", "sync", "macros", "io-util", "net"] }
tokio-util.workspace = true

[dev-dependencies]
serde_json.workspace = true
hex = "0.4.3"
tokio = { workspace = true, features = ["full"] }

[lib]
path = "./blockchain.rs"

[features]
default = ["secp256k1"]
secp256k1 = ["ethrex-common/secp256k1", "ethrex-vm/secp256k1"]
c-kzg = ["ethrex-common/c-kzg", "ethrex-vm/c-kzg"]
metrics = ["ethrex-metrics/transactions"]
stateless-validation = [
    "ethrex-common/stateless-validation",
    "ethrex-vm/stateless-validation",
    "ethrex-guest-program/stateless-validation",
    "dep:serde",
    "dep:serde_json",
    "dep:url",
    "dep:reqwest",
    "dep:spawned-concurrency",
    "dep:ethrex-guest-program",
    "dep:ssz",
    "dep:ssz-merkle",
]

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"
