[package]
name = "ethrex-bsc"
description = "BNB Smart Chain (BSC) support for ethrex — Parlia consensus engine scaffold"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex-common = { workspace = true, default-features = false }
ethrex-rlp.workspace = true
ethrex-crypto = { workspace = true, features = ["secp256k1"] }

serde.workspace = true
serde_json.workspace = true
ethereum-types.workspace = true
bytes.workspace = true
thiserror.workspace = true
hex.workspace = true
lru.workspace = true
tracing.workspace = true
crc32fast.workspace = true

# Precompile crypto dependencies
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "arithmetic", "expose-field"] }
bls12_381 = { git = "https://github.com/lambdaclass/bls12_381", branch = "expose-affine-constructors", default-features = false, features = ["groups", "bits", "pairings", "alloc", "experimental"] }
sha2 = { version = "0.10.9", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
secp256k1.workspace = true
