[package]
name = "ethrex-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp.workspace = true
ethrex-trie = { workspace = true, optional = true }
ethrex-crypto.workspace = true

# Unconditional deps — versions pinned directly because Cargo doesn't allow
# `workspace = true` + `default-features = false` when workspace uses defaults.
ethereum-types = { version = "0.15.1", default-features = false, features = ["serialize"] }
serde = { version = "1.0.203", default-features = false, features = ["derive", "rc", "alloc"] }
serde_json = { version = "1.0.117", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.9", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
bytes = { version = "1.6.0", default-features = false, features = ["serde"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal.workspace = true
rkyv = { version = "0.8.10", default-features = false, features = ["alloc", "unaligned"] }
crc32fast = { version = "1.4.2", default-features = false }
indexmap = { version = "2.11.4", default-features = false }
hex-simd = { version = "0.8.0", default-features = false, features = ["alloc"] }
tracing = { version = "0.1", default-features = false }
rustc-hash = { version = "2.1.1", default-features = false }

# std-only deps (optional)
once_cell = { version = "1.20.2", optional = true }
libc = { version = "0.2", optional = true }
lazy_static = { workspace = true, optional = true }
lru = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
kzg-rs = { workspace = true, optional = true }

secp256k1 = { workspace = true, optional = true }

# EIP-8025 SSZ dependencies (optional)
libssz = { workspace = true, optional = true }
libssz-types = { workspace = true, optional = true }
libssz-merkle = { workspace = true, optional = true }
libssz-derive = { workspace = true, optional = true }

[features]
default = ["std", "secp256k1"]
std = [
    "dep:ethrex-trie",
    "dep:once_cell",
    "dep:libc",
    "dep:lazy_static",
    "dep:lru",
    "dep:rayon",
    "dep:kzg-rs",
    "ethereum-types/std",
    "serde/std",
    "serde_json/std",
    "thiserror/std",
    "bytes/std",
    "hex/std",
    "rkyv/std",
    "tracing/std",
    "rustc-hash/std",
    "indexmap/std",
]
c-kzg = ["ethrex-crypto/c-kzg"]
secp256k1 = ["dep:secp256k1", "ethrex-crypto/secp256k1"]
eip-8025 = ["dep:libssz", "dep:libssz-types", "dep:libssz-merkle", "dep:libssz-derive"]

risc0 = ["ethrex-crypto/risc0"]
sp1 = []
zisk = []
openvm = ["ethrex-crypto/openvm"]

[dev-dependencies]
k256.workspace = true

[lib]
path = "./common.rs"

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"
