[package]
name = "ethrex-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp.workspace = true
ethrex-trie.workspace = true
ethrex-crypto.workspace = true

tracing.workspace = true
ethereum-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
kzg-rs.workspace = true
once_cell = "1.20.2"
libc = "0.2"
crc32fast.workspace = true
bytes.workspace = true
hex.workspace = true
hex-literal.workspace = true
lazy_static.workspace = true
lru.workspace = true
rayon.workspace = true
rkyv.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
hex-simd = "0.8.0"

secp256k1 = { workspace = true, optional = true }

# EIP-8025 SSZ dependencies (optional)
libssz = { workspace = true, optional = true }
libssz-types = { workspace = true, optional = true }
libssz-merkle = { workspace = true, optional = true }
libssz-derive = { workspace = true, optional = true }

[features]
default = ["secp256k1"]
c-kzg = ["ethrex-crypto/c-kzg"]
secp256k1 = ["dep:secp256k1", "ethrex-crypto/secp256k1"]
eip-8025 = ["dep:libssz", "dep:libssz-types", "dep:libssz-merkle", "dep:libssz-derive"]

risc0 = ["ethrex-crypto/risc0"]
sp1 = []
zisk = []
openvm = ["ethrex-crypto/openvm"]

[dev-dependencies]
k256.workspace = true

[lib]
path = "./common.rs"

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"
