# This is a virtual workspace for the zkVM binary crates only.
# The library crates (common, l1, l2) are part of the root ethrex workspace.
[workspace]
members = ["bin/sp1", "bin/risc0", "bin/zisk", "bin/openvm"]
resolver = "2"

[workspace.package]
version = "9.0.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Local guest crates (path dependencies since they're in the root workspace)
ethrex-guest-common = { path = "common" }
ethrex-guest-program = { path = "l1" }
ethrex-guest-l2 = { path = "l2" }

# Serialization
rkyv = { version = "0.8.10", default-features = false, features = [
    "std",
    "unaligned",
] }
