[package]
name = "ethrex-gnosis"
description = "Gnosis Chain support for ethrex (chain IDs 100 mainnet, 10200 Chiado)"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex-common = { workspace = true, default-features = false }
ethrex-crypto = { workspace = true }
ethereum-types.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true

[lints]
workspace = true
