[package]
name = "ethrex-guest-program"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_with.workspace = true
thiserror = "2.0.9"
rkyv.workspace = true
bytes.workspace = true

ethereum-types.workspace = true
ethrex-common = { path = "../common/", default-features = false }
ethrex-crypto = { path = "../common/crypto", default-features = false }
ethrex-vm = { path = "../vm", default-features = false }
ethrex-rlp = { path = "../common/rlp", default-features = false }
ethrex-l2-common = { path = "../l2/common", default-features = false }

# zkVM crypto dependencies (pure Rust, compile for RISC-V targets)
k256 = { workspace = true, optional = true }
substrate-bn = { version = "0.6.0", optional = true }
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.15.0", optional = true }

[build-dependencies]
hex.workspace = true
risc0-build = { version = "=3.0.3", optional = true }
sp1-build = { version = "=5.0.8", optional = true }
sp1-sdk = { version = "=5.0.8", optional = true }

[package.metadata.risc0]
methods = ["bin/risc0"]

[features]
default = ["secp256k1"]

# Crypto-only features: enable the zkVM crypto modules without build tooling.
# Guest binaries use these to get their Crypto implementation without triggering
# the build script (which would cause infinite recursion).
sp1-crypto = ["dep:k256", "dep:substrate-bn"]
risc0-crypto = ["dep:k256", "dep:substrate-bn"]
zisk-crypto = ["dep:k256", "dep:substrate-bn", "dep:ziskos"]
openvm-crypto = ["dep:k256"]

# Full features: crypto + build tooling + feature propagation.
# Used by the prover host to compile guest ELFs via the build script.
risc0 = [
    "risc0-crypto",
    "dep:risc0-build",
    "ethrex-l2-common/secp256k1",
]
sp1 = [
    "sp1-crypto",
    "dep:sp1-build", "dep:sp1-sdk",
    "ethrex-l2-common/secp256k1",
]
zisk = [
    "zisk-crypto",
    "ethrex-common/zisk", "ethrex-vm/zisk", "ethrex-l2-common/zisk",
]
openvm = [
    "openvm-crypto",
    "ethrex-l2-common/secp256k1",
]
l2 = []
c-kzg = ["ethrex-vm/c-kzg", "ethrex-common/c-kzg"]
secp256k1 = [
    "ethrex-common/secp256k1",
    "ethrex-vm/secp256k1",
    "ethrex-l2-common/secp256k1",
]
# temporary feature until we fix cargo-zisk setup-rom from failing in the CI
ci = []

# When this feature is enabled, the cycles used in the code inside the
# report_cycles function will be reported to stdout when running inside SP1 zkVM.
sp1-cycles = []

[lib]
path = "./src/lib.rs"
