[package]
name = "ethrex-guest-program"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_with.workspace = true
thiserror = "2.0.9"
rkyv.workspace = true
bytes.workspace = true

ethereum-types.workspace = true
ethrex-common = { path = "../common/", default-features = false }
ethrex-crypto = { path = "../common/crypto", default-features = false }
ethrex-vm = { path = "../vm", default-features = false }
ethrex-rlp = { path = "../common/rlp", default-features = false }
ethrex-l2-common = { path = "../l2/common", default-features = false }

# EIP-8025 SSZ dependencies (optional)
libssz = { workspace = true, optional = true }
libssz-merkle = { workspace = true, optional = true }

# zkVM crypto dependencies (pure Rust, compile for RISC-V targets)
k256 = { workspace = true, optional = true }
substrate-bn = { version = "0.6.0", optional = true }
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.16.1", optional = true }

[build-dependencies]
hex.workspace = true
risc0-build = { version = "=3.0.3", optional = true }
sp1-build = { version = "=5.0.8", optional = true }
sp1-sdk = { version = "=5.0.8", optional = true }

[package.metadata.risc0]
methods = ["bin/risc0"]

[features]
default = ["secp256k1"]

# Base features: enable the zkVM crypto modules and feature propagation.
# Guest binaries use these to get their Crypto implementation.
sp1 = ["dep:k256", "dep:substrate-bn", "ethrex-l2-common/secp256k1", "ethrex-crypto/kzg-rs"]
risc0 = ["dep:k256", "dep:substrate-bn", "ethrex-l2-common/secp256k1"]
zisk = [
    "dep:k256", "dep:substrate-bn", "dep:ziskos",
    "ethrex-common/zisk", "ethrex-vm/zisk", "ethrex-l2-common/zisk",
    "ethrex-crypto/kzg-rs",
]
openvm = ["dep:k256", "ethrex-l2-common/secp256k1"]

# Build-ELF features: base + build tooling for compiling guest ELFs.
# Used by the prover host. Enabling these triggers the build script which
# compiles the guest binary — guest binaries must NOT enable these.
sp1-build-elf = ["sp1", "dep:sp1-build", "dep:sp1-sdk"]
risc0-build-elf = ["risc0", "dep:risc0-build"]
zisk-build-elf = ["zisk"]
openvm-build-elf = ["openvm"]

l2 = []
eip-8025 = ["ethrex-common/eip-8025", "dep:libssz", "dep:libssz-merkle"]
c-kzg = ["ethrex-vm/c-kzg", "ethrex-common/c-kzg"]
secp256k1 = [
    "ethrex-common/secp256k1",
    "ethrex-vm/secp256k1",
    "ethrex-l2-common/secp256k1",
]
# temporary feature until we fix cargo-zisk setup-rom from failing in the CI
ci = []

# When this feature is enabled, the cycles used in the code inside the
# report_cycles function will be reported to stdout when running inside SP1 zkVM.
sp1-cycles = []

[lib]
path = "./src/lib.rs"
