[package]
name = "ethrex-l2"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ethereum-types.workspace = true
ethrex-common.workspace = true
ethrex-rlp.workspace = true
ethrex-rpc.workspace = true
ethrex-blockchain.workspace = true
ethrex-storage.workspace = true
ethrex-storage-rollup.workspace = true
ethrex-trie.workspace = true
ethrex-vm.workspace = true
ethrex-l2-common.workspace = true
ethrex-l2-rpc.workspace = true
ethrex-metrics = { path = "../blockchain/metrics", default-features = false }
ethrex-sdk = { path = "./sdk" }
ethrex-p2p.workspace = true
hex.workspace = true
bytes.workspace = true
secp256k1.workspace = true
keccak-hash.workspace = true
rand.workspace = true
thiserror.workspace = true
spawned-concurrency.workspace = true
bincode.workspace = true
serde_with.workspace = true
lazy_static.workspace = true
aligned-sdk.workspace = true
ethers.workspace = true
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tui-logger.workspace = true

zkvm_interface = { path = "./prover/zkvm/interface/" }


[build-dependencies]
vergen-git2 = { version = "1.0.7" }

[lib]
path = "./l2.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"

[features]
default = ["l2"]
metrics = ["ethrex-blockchain/metrics"]
l2 = ["zkvm_interface/l2"]
