[package]
name = "ethrex-l2"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-common = { workspace = true, default-features = false }
ethrex-blockchain = { workspace = true, default-features = false }
ethrex-storage = { workspace = true, default-features = false }
ethrex-storage-rollup = { workspace = true, default-features = false }
ethrex-vm = { workspace = true, default-features = false }
ethrex-levm = { workspace = true, default-features = false }
ethrex-l2-common = { workspace = true, default-features = false }
ethrex-l2-rpc = { workspace = true, default-features = false }
ethrex-sdk = { path = "./sdk", default-features = false }
ethrex-dev = { path = "../../crates/blockchain/dev", default-features = false }
ethrex-metrics = { path = "../blockchain/metrics", default-features = false }
ethrex-config = { workspace = true, default-features = false }
ethrex-rlp.workspace = true
ethrex-rpc = { workspace = true, default-features = false }
ethrex-trie.workspace = true
ethrex-p2p = { workspace = true, default-features = false }

reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ethereum-types.workspace = true
hex.workspace = true
bytes.workspace = true
jsonwebtoken.workspace = true
envy = "0.4.2"
rand.workspace = true
thiserror.workspace = true
spawned-rt.workspace = true
spawned-concurrency.workspace = true
futures.workspace = true
directories = "5.0.1"
bincode = "1.3.3"
serde_with.workspace = true
lazy_static.workspace = true
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag = "v0.16.1" }
ethers = "2.0"
chrono = "0.4.41"
clap.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29.0"
tui-big-text = "0.7.1"
tui-scrollview = "0.5.1"
tui-logger.workspace = true
tabwriter = "1.4.1"
color-eyre = "0.6.5"
axum.workspace = true

guest_program = { path = "./prover/src/guest_program/", default-features = false }

secp256k1.workspace = true # FIXME

[build-dependencies]
vergen-git2 = { version = "1.0.7" }

[dev-dependencies]
anyhow = "1.0.86"

[lib]
path = "./l2.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"

[features]
default = ["l2", "l1"]
rocksdb = []
metrics = ["ethrex-blockchain/metrics"]

l2 = ["guest_program/l2"]

secp256k1 = [
    "ethrex-common/secp256k1",
    "ethrex-l2-common/secp256k1",
    "ethrex-levm/secp256k1",
    "ethrex-vm/secp256k1",
    "guest_program/secp256k1",
]
k256 = [
    "ethrex-common/k256",
    "ethrex-l2-common/k256",
    "ethrex-levm/k256",
    "ethrex-vm/k256",
    "guest_program/k256",
]

c-kzg = [
    "ethrex-l2-common/c-kzg",
    "ethrex-common/c-kzg",
    "ethrex-blockchain/c-kzg",
    "ethrex-levm/c-kzg",
    "ethrex-vm/c-kzg",
    "guest_program/c-kzg",
]
kzg-rs = [
    "ethrex-l2-common/kzg-rs",
    "ethrex-common/kzg-rs",
    "ethrex-blockchain/kzg-rs",
    "ethrex-levm/kzg-rs",
    "ethrex-vm/kzg-rs",
    "guest_program/kzg-rs",
]

l1 = [
    "ethrex-common/l1",
    "ethrex-blockchain/l1",
    "ethrex-storage/l1",
    "ethrex-storage-rollup/l1",
    "ethrex-vm/l1",
    "ethrex-levm/l1",
    "ethrex-l2-common/l1",
    "ethrex-l2-rpc/l1",
    "ethrex-sdk/l1",
    "ethrex-dev/l1",
    "ethrex-metrics/l1",
    "ethrex-config/l1",
    "ethrex-rpc/l1",
    "ethrex-p2p/l1",
    "guest_program/l1",
]
sp1 = [
    "ethrex-common/sp1",
    "ethrex-blockchain/sp1",
    "ethrex-storage/sp1",
    "ethrex-storage-rollup/sp1",
    "ethrex-vm/sp1",
    "ethrex-levm/sp1",
    "ethrex-l2-common/sp1",
    "ethrex-l2-rpc/sp1",
    "ethrex-sdk/sp1",
    "ethrex-dev/sp1",
    "ethrex-metrics/sp1",
    "ethrex-config/sp1",
    "ethrex-rpc/sp1",
    "ethrex-p2p/sp1",
    "guest_program/sp1",
]
risc0 = [
    "ethrex-common/risc0",
    "ethrex-blockchain/risc0",
    "ethrex-storage/risc0",
    "ethrex-storage-rollup/risc0",
    "ethrex-vm/risc0",
    "ethrex-levm/risc0",
    "ethrex-l2-common/risc0",
    "ethrex-l2-rpc/risc0",
    "ethrex-sdk/risc0",
    "ethrex-dev/risc0",
    "ethrex-metrics/risc0",
    "ethrex-config/risc0",
    "ethrex-rpc/risc0",
    "ethrex-p2p/risc0",
    "guest_program/risc0",
]
