[package]
name = "ethrex-l2"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ethereum-types.workspace = true
ethrex-common = { workspace = true, features = ["c-kzg"] }
ethrex-config.workspace = true
ethrex-rlp.workspace = true
ethrex-rpc.workspace = true
ethrex-blockchain.workspace = true
ethrex-storage.workspace = true
ethrex-storage-rollup.workspace = true
ethrex-trie.workspace = true
ethrex-vm.workspace = true
ethrex-levm.workspace = true
ethrex-l2-common.workspace = true
ethrex-l2-rpc.workspace = true
ethrex-metrics = { path = "../blockchain/metrics", default-features = false }
ethrex-sdk = { path = "./sdk" }
ethrex-monitor.workspace = true
ethrex-p2p.workspace = true
hex.workspace = true
bytes.workspace = true
jsonwebtoken.workspace = true
secp256k1.workspace = true
envy = "0.4.2"
rand.workspace = true
thiserror.workspace = true
spawned-concurrency.workspace = true
spawned-rt.workspace = true
futures.workspace = true
bincode = "1.3.3"
serde_with.workspace = true
lazy_static.workspace = true
aligned-sdk.workspace = true
alloy = { version = "1.1.1", default-features = false, features = ["signer-local"] }
sp1-sdk = { version = "=5.0.8", optional = true }
chrono = "0.4.41"
clap.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29.0"
tui-logger.workspace = true
axum.workspace = true
k256 = { workspace = true, optional = true }
ethrex-crypto = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }
libssz = { workspace = true, optional = true }
libssz-types = { workspace = true, optional = true }

ethrex-guest-program = { path = "../guest-program", optional = true }

[build-dependencies]
vergen-git2 = { version = "1.0.7" }

[dev-dependencies]
anyhow = "1.0.86"

[lib]
path = "./l2.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"
redundant_clone = "warn"

[features]
default = ["l2"]

sp1 = ["dep:ethrex-guest-program", "dep:sp1-sdk"]
risc0 = []

rocksdb = []

metrics = ["ethrex-blockchain/metrics"]

l2 = []

eip-8025 = [
    "ethrex-vm/eip-8025",
    "ethrex-common/eip-8025",
    "ethrex-blockchain/eip-8025",
    "ethrex-l2-rpc/eip-8025",
    "dep:k256",
    "dep:ethrex-crypto",
    "dep:rustc-hash",
    "dep:libssz",
    "dep:libssz-types",
    "dep:ethrex-guest-program",
    "ethrex-guest-program/eip-8025",
]
