[package]
name = "ethrex-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "time"] }
tracing.workspace = true
thiserror.workspace = true
clap.workspace = true
rkyv.workspace = true
bincode = "1.3.3"
url.workspace = true
spawned-concurrency.workspace = true

# ethrex
ethrex-common.workspace = true
ethrex-vm.workspace = true
ethrex-rlp.workspace = true

ethrex-guest-program = { path = "../guest-program" }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

risc0-zkvm = { version = "=3.0.3", optional = true, features = ["getrandom"] }
risc0-zkp = { version = "=3.0.2", optional = true }

sp1-sdk = { version = "=5.0.8", optional = true }
sp1-prover = { version = "=5.0.8", optional = true }
sp1-recursion-gnark-ffi = { version = "=5.0.8", optional = true }

openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", package = "openvm-sdk", optional = true, features = [
    "evm-prove",
    "parallel",
] }
openvm-continuations = { git = "https://github.com/openvm-org/openvm.git", package = "openvm-continuations", optional = true }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", package = "openvm-stark-sdk", tag = "v1.2.1", optional = true }

[[bin]]
name = "l1_prover"
path = "src/bin/l1_prover.rs"
required-features = ["eip-8025", "l1-prover-bin"]

[lib]
name = "ethrex_prover"
path = "src/lib.rs"

[features]
default = []
risc0 = [
    "ethrex-guest-program/risc0",
    "dep:risc0-zkvm",
    "dep:risc0-zkp",
    "ethrex-common/risc0",
]
sp1 = ["ethrex-guest-program/sp1", "dep:sp1-sdk", "dep:sp1-prover"]
zisk = ["ethrex-guest-program/zisk"]
openvm = [
    "ethrex-guest-program/openvm",
    "dep:openvm-sdk",
    "dep:openvm-stark-sdk",
    "dep:openvm-continuations",
]
profiling = ["sp1-sdk?/profiling"]

gpu = ["risc0-zkvm?/cuda", "sp1-sdk?/cuda", "openvm-sdk?/cuda"]
l2 = ["ethrex-guest-program/l2"]
eip-8025 = ["ethrex-guest-program/eip-8025", "ethrex-common/eip-8025"]
l1-prover-bin = ["dep:tracing-subscriber"]

# temporary feature until we fix cargo-zisk setup-rom from failing in the CI
ci = ["ethrex-guest-program/ci"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"
redundant_clone = "warn"
