[package]
name = "ethrex-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp.workspace = true
ethrex-common.workspace = true
ethrex-crypto.workspace = true
ethrex-trie.workspace = true

async-trait.workspace = true
ethereum-types.workspace = true
anyhow = "1.0.86"
arc-swap.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
hex.workspace = true
serde.workspace = true
serde_json = "1.0.117"
rocksdb = { workspace = true, optional = true }
rustc-hash.workspace = true
tokio = { workspace = true, features = ["rt"] }
fastbloom = "0.14"
rayon.workspace = true
lru = "0.16.2"

[features]
default = []
rocksdb = ["dep:rocksdb"]

[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }

[lib]
path = "./lib.rs"

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"
