[package]
name = "ethrex-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp.workspace = true
ethrex-common.workspace = true
ethrex-crypto.workspace = true
ethrex-trie.workspace = true

anyhow = "1.0.86"
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1.0.117"
rocksdb = { workspace = true, optional = true }
rustc-hash.workspace = true
tokio = { workspace = true, features = ["rt"] }
fastbloom = "0.14"
rayon.workspace = true
lru.workspace = true

[features]
default = []
rocksdb = ["dep:rocksdb"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lib]
path = "./lib.rs"

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"
