[package]
name = "ethrex-vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

[dependencies]
ethrex-common = { workspace = true, default-features = false }
ethrex-levm = { path = "./levm", default-features = false }
ethrex-trie.workspace = true
ethrex-rlp.workspace = true

derive_more = { version = "1.0.0", features = ["full"] }
bytes.workspace = true
thiserror.workspace = true
hex.workspace = true
lazy_static.workspace = true
tracing.workspace = true
serde.workspace = true
sha3.workspace = true
rkyv.workspace = true

bincode = "1"
dyn-clone = "1.0"

ethereum-types.workspace = true

[lib]
path = "./lib.rs"

[features]
default = ["l1"]

secp256k1 = ["ethrex-levm/secp256k1"]
k256 = ["ethrex-levm/k256"]

c-kzg = ["ethrex-levm/c-kzg", "ethrex-common/c-kzg"]
kzg-rs = ["ethrex-levm/kzg-rs", "ethrex-common/kzg-rs"]
openvm-kzg = ["ethrex-levm/openvm-kzg", "ethrex-common/openvm-kzg"]

l1 = ["ethrex-levm/l1", "ethrex-common/l1"]
sp1 = ["ethrex-levm/sp1", "ethrex-common/sp1"]
risc0 = ["ethrex-levm/risc0", "ethrex-common/risc0"]

debug = ["ethrex-levm/debug"]

[lints.clippy]
unwrap_used = "deny"
