[package]
name = "websigner"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
hex = "0.4.3"
secp256k1 = { version = "0.29.1", default-features = false, features = [
  "global-context",
  "recovery",
  "rand",
] }
bytes = { version = "1.6.0", features = ["serde"] }
ethereum-types = "0.15.1"
thiserror = "2.0.9"
rustc-hex = "2.1.0"

[lib]
path = "./websigner.rs"
